--- a/leaflet-step-1/index.html
+++ b/leaflet-step-1/index.html
@@ -15,8 +15,10 @@
         <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
         integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
         crossorigin=""></script>
-        <!--Data-->
-        <script src="data.js"></script>
+        <!--D3 Script-->
+        <script src="https://d3js.org/d3.v4.min.js"></script>
+        <!--Config key for mapbox-->
+        <script src="config.js"></script>
     </head>
 
     <body>
@@ -25,13 +27,13 @@
                 <img src='background.jpg' class="blur " id="large">
             </div>
             <div class="container">
-              <h1 class="display-4">The COVID-19 Affect</h1>
+              <h1 class="display-4">Earthquake Visualizaiton</h1>
               <hr>
-              <p class="lead">This interactive dashboard allows you to investigate the affect of COVID-19 on various aspects of American society. Investigate how stocks, hospitals, and weather statistics changed during the Coronavirus Pandemic of 2020 in comparison with the spread of infection across the continental U.S.</p>
+              <p class="lead">Visualizations of all Magnitude 1.0+ earthquakes in America.</p>
             </div>
         </div>
         <!--Div for map-->
-        <div class="container-fluid" id="map"></div>
+        <div id="map"></div>
         <!--JS-->
         <script src="plot.js"></script>
     </body>
