--- a/leaflet-step-2/index.html
+++ b/leaflet-step-2/index.html
@@ -19,6 +19,8 @@
         <script src="https://d3js.org/d3.v4.min.js"></script>
         <!--Config key for mapbox-->
         <script src="config.js"></script>
+        <!--Data-->
+        <script src="data.js"></script>
     </head>
 
     <body>
@@ -29,12 +31,12 @@
             <div class="container">
               <h1 class="display-4">Earthquake Visualizaiton</h1>
               <hr>
-              <p class="lead">Visualizations of all Magnitude 1.0+ earthquakes in America.</p>
+              <p class="lead">Visualizations of all Magnitude 1.0+ earthquakes in the world.</p>
             </div>
         </div>
         <!--Div for map-->
         <div id="map"></div>
-        <!--JS-->
-        <script src="plot.js"></script>
+        <!--JS for Earthquake markers-->
+        <script src="earthquakes.js"></script>
     </body>
 </html>
